--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -20,7 +20,7 @@ platforms:
     pid_one_command: /bin/systemd
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
-      - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools python python2 -y
+      - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools python -y
 
 suites:
 - name: resources
